03_bibliotecas/bibli_03/Resultados/Aline/data/result_compilation.txt
data.c: In function ‘calculaDiferencaDias’:
data.c:138:16: error: ‘dias’ undeclared (first use in this function); did you mean ‘dia2’?
  138 |     int resp=0;dias=0, i, j;
      |                ^~~~
      |                dia2
data.c:138:16: note: each undeclared identifier is reported only once for each function it appears in
data.c:138:24: error: ‘i’ undeclared (first use in this function)
  138 |     int resp=0;dias=0, i, j;
      |                        ^
data.c:138:22: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  138 |     int resp=0;dias=0, i, j;
      |                      ^
data.c:138:27: error: ‘j’ undeclared (first use in this function)
  138 |     int resp=0;dias=0, i, j;
      |                           ^
data.c:138:25: warning: left-hand operand of comma expression has no effect [-Wunused-value]
  138 |     int resp=0;dias=0, i, j;
      |                         ^
data.c: In function ‘numeroDiasMes’:
data.c:98:1: warning: control reaches end of non-void function [-Wreturn-type]
   98 | }
      | ^
data.c: In function ‘calculaDiferencaDias’:
data.c:206:1: warning: control reaches end of non-void function [-Wreturn-type]
  206 | }
      | ^
